# benerin-api

./: .gitignore  Cargo.toml  README.md
addressing/: Cargo.toml
api/: Cargo.toml
api/src/: main.rs  openapi.json
benerin-api/: Cargo.toml
benerin-api/src/lex/: statics.rs  string_strategy.rs  suggestion.rs  symspell.rs  validator.rs
docs/: correction-codes.md
georesolv/: Cargo.toml  build.rs  libpostal.sh
georesolv/src/: lib.rs  types.rs
grammar/: Cargo.toml
graph/: Cargo.toml
graph/src/: lib.rs  types.rs
labs/: README.md  combiner.py  corrector.py  dt-adverbia.csv  dt-particles.csv  dt-pronouns.csv  dt-seeotherfixes.csv  extract.py  insert.py  list.txt  main.py  requirements.txt  schema.sql
spellcheck/: Cargo.toml
spellcheck/src/: lib.rs
spellcheck/src/symspell/: composition.rs  edit_distance.rs  mod.rs  string_strategy.rs  suggestion.rs  symspell.rs
src/: lex.rs  main.rs
src/api/: cors.rs
src/lex/: mod.rs  parser.rs  renderer.rs  statics.rs  suggestion.rs  symspell.rs  validator.rs
stemmer/: Cargo.toml
stemmer/src/: lib.rs  sastrawi.rs
stemming/: Cargo.toml
stemming/src/: lib.rs  postemi.rs  sastrawi.rs
tokenization/: Cargo.toml
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  parser.rs  renderer.rs  types.rs
