[package]
name = "benerin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
default-features = false

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_mysql"]

[profile.release]
strip = true 
lto = true
