[package]
name = "benerin-api"
version = "0.2.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
derive_builder = "^0.10"
serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
tower = "0.4.13"
strsim = "^0.10"

[dependencies.axum]
version = "0.6.19"
features = ["query", "http1"]
default-features = false

[dependencies.hyper]
version = "0.14.27"
features = ["server", "tcp"]
default-features = false

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "rt-multi-thread", "time"]
default-features = false

[dependencies.tower-http]
version = "0.4.3"
features = ["cors"]
default-features = false

[profile.release]
strip = true 
lto = true
